# agora

./: .bazelrc  .gitignore  BUILD.bazel  HANDOFF.md  MODULE.bazel  README.md  rivet.yaml
.github/: dependabot.yml
agent/: BUILD.bazel  Cargo.toml
agent/src/: bindings.rs  lib.rs
agent/wit/: world.wit
artifacts/: decisions.yaml  requirements.yaml
docs/: getting-started.md
facts/: coordination.yaml
host/: BUILD.bazel  Cargo.toml
host/src/: main.rs
safety/: control-structure.yaml  stpa-sec.yaml
