[package]
name = "agora-host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "41"
anyhow = "1"
wasmtime-wasi = "46"
# Real durable spine: NATS JetStream (global ordering, durable consumers, dedup).
tokio = { version = "1", features = ["rt", "macros", "time"] }
async-nats = "0.38"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "agora-host"
path = "src/main.rs"
